[tool.poetry]
name = "web3-sandbox"
version = "0.1.0"
description = ""
authors = ["shadeofblue <blue@wave460.net>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
web3 = "^6.19.0"
click = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
web3-sandbox = "web3_sandbox.__main__:_cli"
